[package]
name = "date-rs"
version = "0.1.2"
edition = "2021"
authors = ["Luke Sneeringer <luke@sneeringer.com>"]
description = "Gregorian calendar date"
keywords = ["date", "time"]
categories = ["date-and-time"]
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/lukesneeringer/date-rs"
documentation = "https://docs.rs/date_rs"
readme = "README.md"
exclude = [
  "/.github/*",
  "/rustfmt.toml",
  "/.prettierrc.yaml",
]

[lib]
name = "date"

[dependencies]
anyhow = { version = "1" }
diesel = { version = "2", optional = true }
serde = { version = "1", optional = true }
tzdb = { version = "0.6", optional = true, features = ["local"] }

[dev-dependencies]
assert2 = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[features]
default = ["serde"]
diesel-pg = ["dep:diesel", "diesel/postgres"]
