[package]
name = "date-rs"
version = "1.0.1"
edition = "2021"
authors = ["Luke Sneeringer <luke@sneeringer.com>"]
description = "Gregorian calendar date"
keywords = ["date", "time"]
categories = ["date-and-time"]
rust-version = "1.73"
license = "MIT"
repository = "https://github.com/lukesneeringer/date-rs"
documentation = "https://docs.rs/date_rs"
readme = "README.md"
exclude = [
  "/.github/*",
  "/rustfmt.toml",
  "/.prettierrc.yaml",
]

[lib]
name = "date"

[dependencies]
diesel = { version = "2", optional = true }
serde = { version = "1", optional = true }
strptime = { version = "1" }
tzdb = { version = "0.6", optional = true, features = ["local"] }
tz-rs = { version = "0.6", optional = true }

[dev-dependencies]
assert2 = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[features]
default = ["serde"]
diesel-pg = ["dep:diesel", "diesel/postgres"]
easter = []
tz = ["dep:tz-rs", "dep:tzdb"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
